@@ -13,9 +13,9 @@ public class ConvertListTest {
     @Test
     public void whenTwoList() {
         List<int[]> in = new ArrayList<>();
-        in.add(new int[] {1});
-        in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        in.add(new int[]{1});
+        in.add(new int[]{2, 3});
+        List<Integer> expect = List.of(1, 2, 3);
         System.out.println(expect);
         assertThat(ConvertList.convert(in), is(expect));
     }
